fix alignment with navbar

--- a/src/components/HomeHero/HomeHero.scss
+++ b/src/components/HomeHero/HomeHero.scss
@@ -4,8 +4,7 @@
   position: relative;
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  justify-content: flex-start;
   overflow: hidden;
 }
 
@@ -21,20 +20,17 @@
 .hero-description {
   position: absolute;
   top: 30%;
-  left: 30px;
   width: 80%;
-  justify-content: center;
-  align-items: center;
+  padding: 0 4%;
   @include breakpoint(sm) {
     width: 50%;
   }
   @include breakpoint(md) {
-    top: 40%;
+    top: 35%;
     width: 50%;
   }
   @include breakpoint(xlg) {
-    left: 60px;
-    width: 40%;
+    width: 46%;
   }
 }
 
@@ -70,7 +66,6 @@ p {
   letter-spacing: -1px;
   text-shadow: 2px 2px 4px var(--black);
   @include breakpoint(md) {
-    padding-left: 0.5rem;
     font-size: 1.35rem;
   }
   @include breakpoint(lg) {
@@ -87,9 +82,6 @@ p {
   display: flex;
   flex-direction: row;
   margin-top: 1.7vw;
-  @include breakpoint(md) {
-    padding-left: 0.5rem;
-  }
 }
 
 .hero-button {
